# pacman-g2

./: .gitignore  AUTHORS  CMakeLists.txt  Dockerfile  HACKING  Makefile.am  NEWS  README  SConstruct  SConstruct~  TODO  TODO.autoconf  TODO.frugalware  autoclean.sh  autogen.sh  cmake_config.h  configure.ac  configure.in  develconf
bindings/: alpm.i  pacman.i
bindings/csharp/: .gitignore  CMakeLists.txt  Makefile.in  pacman-csharp.snk
bindings/java/: CMakeLists.txt  Makefile.in
bindings/perl/: .gitignore  CMakeLists.txt  Makefile.in
bindings/python/: CMakeLists.txt  Makefile  Makefile.in  alpm.i
cmake_modules/: FindPacCURL.cmake  FindPerlLibs.cmake  FindPo4a.cmake  GettextTranslate.cmake  UseAsciidoc.cmake  cmake_FindAsciidoc.cmake
doc/: .gitignore  CMakeLists.txt  FrugalBuild.8  FrugalBuild.txt  Makefile.am  addendum.8.hu  bugs.txt  libalpm.3  libalpm.3.in  libpacman-changes.txt  libpacman.3  libpacman.txt  makepkg.8  makepkg.8.in  makepkg.txt  pacman-g2.8  pacman-g2.8.txt  pacman-g2.txt  pacman.8  pacman.8.in  po4a.cfg
doc/examples/: Makefile  example.py  main.java  pacman_q.pl  pacman_qo.pl
doc/hu/: Makefile.am
doc/po/: hu.po  pacman-g2.pot  pacman.pot
etc/: CMakeLists.txt  Makefile.am  current-makepkg.conf.in  makepkg.conf  makepkg.conf.in  pacman-g2.conf.in  pacman.conf.in
etc/pacman-g2/: CMakeLists.txt  Makefile.am
etc/pacman-g2/hooks/: CMakeLists.txt  Makefile.am  hooks.sh  mkfontdir
etc/pacman-g2/repos/: CMakeLists.txt  Makefile.am  frugalware-current.in  frugalware.in
etc/pacman.d/: .gitignore  Makefile.am  extra-current.in  extra.in  frugalware-current.in  frugalware.in
gpg/: Makefile.am
lib/: SConscript  SConstruct
lib/libfetch/: CMakeLists.txt  Makefile  Makefile.am  ftp.c  http.c
lib/libflib/: Makefile.am  fbytestream.c  fbytestream.h  fcallbacks.c  fcallbacks.h  fgraph.c  fgraph.h  flist.c  flist.h  flistaccumulator.c  flistaccumulator.h  flogger.c  flogger.h  fmd5.c  fmd5.h  fobject.c  fobject.h  fregex.c  fsha1.c  fsha1.h  fstddef.h  fstdlib.c  fstdlib.h  fstring.c  fstring.h  fstringlist.c  fstringlist.h  fvalue.c  fvalue.h
lib/libpacman/: CMakeLists.txt  Doxyfile  Makefile.am  SConscript  SConstruct  add.c  add.h  backup.c  backup.h  be_files.c  cache.c  cache.cpp  cache.h  config_parser.c  config_parser.cpp  config_parser.h  conflict.c  conflict.cpp  conflict.h  database_cache.cpp  db.c  db.cpp  db.h  deps.c  deps.cpp  deps.h  error.c  error.cpp  error.h  fakedb.c  fakedb.h  fdb.c  fdb.h  file.c  file.h  fmath.h  fstdlib.h  fstring.c  fstring.h  group.c  (+56 more)
lib/libpacman/db/: fakedb.c  fakedb.cpp  fakedb.h  localdb.c  localdb.cpp  localdb.h  localdb_files.c  localdb_files.cpp  localdb_files.h  syncdb.c  syncdb.cpp  syncdb.h
lib/libpacman/fstdlib/: canonicalize.c
lib/libpacman/fstring/: basename.c  case.c  dirname.c  matcher.c
lib/libpacman/hash/: md5.h  md5driver.c  sha1.c  sha1.h
lib/libpacman/io/: archive.c  archive.h  ffilelock.c  ffilelock.h  ftp.c  ftp.h
lib/libpacman/kernel/: fobject.cpp  fobject.h  frefcounted.cpp  frefcounted.h  fsignal.h  fstr.cpp  fstr.h
lib/libpacman/package/: fpmpackage.c  fpmpackage.cpp  fpmpackage.h  packagecache.c  packagecache.cpp  packagecache.h  pkginfo.c  pkginfo.h
lib/libpacman/po/: CMakeLists.txt  Makevars  POTFILES.in
lib/libpacman/util/: fabstractlogger.cpp  fabstractlogger.h  falgorithm.h  falgorithms.h  fcallback.h  fcomparator.h  fdispatchlogger.c  fdispatchlogger.cpp  fdispatchlogger.h  ffilelogger.c  ffilelogger.cpp  ffilelogger.h  ffunctional.h  flist.c  flist.h  flist_p.h  flog.c  flog.cpp  flog.h  flogger.c  flogger.cpp  flogger.h  fmatcher.h  fptrlist.c  fptrlist.cpp  fptrlist.h  fptrlist_p.h  fset.h  fstringlist.cpp  fstringlist.h  fstrset.h  fsyslogger.cpp  fsyslogger.h  ftype_traits.h  list.c  list.h  log.c  log.h  stringlist.c  stringlist.h  (+2 more)
merge/: Makefile.in  aclocal.m4  config.h.in  configure
old/: AUTHORS  Makefile.am  README  autoclean.sh  cmake_config.h  develconf
old/bindings/java/: .gitignore  CMakeLists.txt
old/bindings/python/: .gitignore
old/bindings/vala/: CMakeLists.txt
old/cmake_modules/: FindMono.cmake
old/doc/: .gitignore
old/doc/examples/: example.py  runme.cs
old/etc/: makepkg.conf.in
old/etc/bash_completion.d/: Makefile.am  pacman-g2
old/etc/pacman-g2/hooks/: depmod  fc-cache  hooks.skel  mkfontscale
old/etc/pacman-g2/repos/: Makefile.am  frugalware-current.in
old/lib/libftp/: ftplib.c  ftplib.h
old/lib/libpacman/: add.c  add.h  cache.c  db.h  deps.c  log.c  md5driver.c  package.c  package.h  pacman.pc.in  provide.c  remove.c  remove.h  server.c  server.h  sync.c  trans.h  util.c
old/lib/libpacman/po/: POTFILES.in
old/pactest/: pactest.py  pmdb.py  pmenv.py  pmpkg.py
old/pactest/tests/: remove033.py  sync022.py  upgrade070.py
old/scripts/: copyright.py  gensync  makeworld  mirrors.py  pacman-g2-optimize  updatesync
old/src/pacman-g2/: .gitignore  CMakeLists.txt  deptest.c  deptest.h  download.c  list.c  list.h  log.h  ps.h  remove.c  remove.h  util.h
old/src/versort/: CMakeLists.txt  Makefile.am
pactest/: CMakeLists.txt  ChangeLog  README  TODO  pactest.py  pmdb.py  pmenv.py  pmfile.py  pmpkg.py  pmrule.py  pmtest.py  util.py
patches/: file_ext.patch  (+2 more)
src/pacman/: Makefile.am  add.c  conf.c  conf.h  db.c  db.h  deptest.c  download.c  download.h  list.c  log.c  log.h  package.c  package.h  pacman.c  pacman.h  query.c  remove.c  sync.c  trans.c  trans.h  upgrade.c  util.c
src/pacman-g2/: .gitignore  CMakeLists.txt  Makefile.am  SConscript  add.c  add.h  callback.c  callback.h  conf.c  conf.h  deptest.c  deptest.h  download.c  download.h  list.c  list.cpp  list.h  log.c  log.h  package.c  package.h  pacman-g2.c  pacman-g2.h  ps.c  ps.h  query.c  query.h  remove.c  remove.h  sync.c  sync.h  trans.c  trans.h  upgrade.c  upgrade.h  util.c  util.h  vercmp.c
src/pacman-g2-static/: CMakeLists.txt
src/pacman-g2/po/: CMakeLists.txt  POTFILES.in  de.po  fr.po  hu.po  pacman-g2.pot
src/pacman/po/: Makevars  de.po  fr.po  hu.po  pacman.pot
src/versort/: .gitignore  Makefile.am  SConscript  versort.c
(+131 files in other folders)
